--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ disqus_shortname:   taylantatli
 
 # Social
 # if you don't have any of social below, comment the line.
-#google:
+google:             web7722@gmail.com
   #plus:            #username
   #analytics:
   #verify:
@@ -38,7 +38,8 @@ disqus_shortname:   taylantatli
   #ad-slot:
 #bing-verify:
 #email:
-
+#twitter:            username
+#facebook:           username
 github-url:         ingoos
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
@@ -49,7 +50,7 @@ instagram:          web7722
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-
+#steam:              web7722
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
