Add i am infomation

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              ingoo
-bio:                '잉구스터디 명함 blog 입니다.'
+bio:                '잉구스터디 명함 blog 입니다. <br> phone : 010-8955-7722 email : web722@gmail.com'
 description:        "Free 하게 HTML 및 개발 을 배우고싶어하는 분들은 클릭해주세요."
 reading_time:       true
 words_per_minute:   200
