--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              ingoo
-bio:                '잉구스터디 입니다. <br> '
+bio:                '안녕하세요 잉구스터디 입니다. <br> 정해진 시간에 배우는 방식이 아닌 일을 다니면서 자유롭게 학습하고 싶으신분들 <br > <b>환영헙나다.</b>'
 description:        "자유롭게 HTML 및 개발 을 배우고 싶어하는 분들은 클릭해주세요."
 reading_time:       true
 words_per_minute:   200
